syntax = "proto3";

package type_repeated;

option go_package = "xgo/tests/pb/pbformat";

//import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";

//import "tests/proto/module/external.proto";

//import "tests/proto/cases/references/private.proto";

import "proto/json.proto";

message TypeRepeated1 {
  repeated int32 f_int32a = 1 [ (json.field) = {
    format: { repeated: { elem: { int32: { codec: Numeric } } } }
  } ];
  repeated int32 f_int32b = 2 [ (json.field) = {
    format: { repeated: { elem: { int32: { codec: String } } } }
  } ];

  repeated int64 f_int64a = 3 [ (json.field) = {
    format: { repeated: { elem: { int64: { codec: Numeric } } } }
  } ];
  repeated int64 f_int64b = 4 [ (json.field) = {
    format: { repeated: { elem: { int64: { codec: String } } } }
  } ];

  repeated uint32 f_uint32a = 5 [ (json.field) = {
    format: { repeated: { elem: { uint32: { codec: Numeric } } } }
  } ];
  repeated uint32 f_uint32b = 6 [ (json.field) = {
    format: { repeated: { elem: { uint32: { codec: String } } } }
  } ];

  repeated uint64 f_uint64a = 7 [ (json.field) = {
    format: { repeated: { elem: { uint64: { codec: Numeric } } } }
  } ];
  repeated uint64 f_uint64b = 8 [ (json.field) = {
    format: { repeated: { elem: { uint64: { codec: String } } } }
  } ];

  repeated sint32 f_sint32a = 9 [ (json.field) = {
    format: { repeated: { elem: { sint32: { codec: Numeric } } } }
  } ];
  repeated sint32 f_sint32b = 10 [ (json.field) = {
    format: { repeated: { elem: { sint32: { codec: String } } } }
  } ];

  repeated sint64 f_sint64a = 11 [ (json.field) = {
    format: { repeated: { elem: { sint64: { codec: Numeric } } } }
  } ];
  repeated sint64 f_sint64b = 12 [ (json.field) = {
    format: { repeated: { elem: { sint64: { codec: String } } } }
  } ];

  repeated sfixed32 f_sfixed32a = 13 [ (json.field) = {
    format: { repeated: { elem: { sfixed32: { codec: Numeric } } } }
  } ];
  repeated sfixed32 f_sfixed32b = 14 [ (json.field) = {
    format: { repeated: { elem: { sfixed32: { codec: String } } } }
  } ];

  repeated sfixed64 f_sfixed64a = 15 [ (json.field) = {
    format: { repeated: { elem: { sfixed64: { codec: Numeric } } } }
  } ];
  repeated sfixed64 f_sfixed64b = 16 [ (json.field) = {
    format: { repeated: { elem: { sfixed64: { codec: String } } } }
  } ];

  repeated fixed32 f_fixed32a = 17 [ (json.field) = {
    format: { repeated: { elem: { fixed32: { codec: Numeric } } } }
  } ];
  repeated fixed32 f_fixed32b = 18 [ (json.field) = {
    format: { repeated: { elem: { fixed32: { codec: String } } } }
  } ];

  repeated fixed64 f_fixed64a = 19 [ (json.field) = {
    format: { repeated: { elem: { fixed64: { codec: Numeric } } } }
  } ];
  repeated fixed64 f_fixed64b = 20 [ (json.field) = {
    format: { repeated: { elem: { fixed64: { codec: String } } } }
  } ];

  repeated float f_float1 = 21 [ (json.field) = {
    format: { repeated: { elem: { float: { codec: Numeric } } } }
  } ];
  repeated float f_float2 = 22 [ (json.field) = {
    format: { repeated: { elem: { float: { codec: String } } } }
  } ];

  repeated double f_double1 = 23 [ (json.field) = {
    format: { repeated: { elem: { double: { codec: Numeric } } } }
  } ];
  repeated double f_double2 = 24 [ (json.field) = {
    format: { repeated: { elem: { double: { codec: String } } } }
  } ];

  repeated bool f_bool1 = 25 [ (json.field) = {
    format: { repeated: { elem: { bool: { codec: Bool } } } }
  } ];
  repeated bool f_bool2 = 27 [ (json.field) = {
    format: { repeated: { elem: { bool: { codec: String } } } }
  } ];
}

// Only used to test type error.
message TypeRepeated2 {
  repeated string f_string1 = 1 [ (json.field) = { } ];

  repeated bytes f_bytes1  = 2 [ (json.field) = { } ];
}
